--- a/3. Habitat Technologies.md
+++ b/3. Habitat Technologies.md
@@ -1,10 +1,11 @@
+# 3) Habitat Technologies
 [![MARS ICE HOME — Clouds Architecture Office](https://tse3.mm.bing.net/th/id/OIP.JjXaRURuDZ5T9j-JxHkAbAHaD8?pid=Api)](https://cloudsao.com/MARS-ICE-HOME)
 
 Here are visual concept renderings of the **Mars Ice Home**—an inflatable, ice‑shelled habitat concept developed by NASA’s Langley Research Center in collaboration with SEArch+ and Clouds Architecture Office. These images illustrate how translucent ice-filled domes can provide natural lighting, structural integrity, and radiation shielding simultaneously. ([cloudsao.com][1])
 
 ---
 
-## 3) Habitat Technologies — AGI-Built, Self-Deploying Ice-Domes (First Colony Upgraded via AGI, People-Free)
+## AGI-Built, Self-Deploying Ice-Domes (First Colony Upgraded via AGI, People-Free)
 
 **High-Level Goal:** Deploy habitats autonomously in the **2036 Mars mission wave**, constructed and operated entirely by AGI-enabled robotics. Focus on built-in **radiation shielding**, **pressurized livable volumes**, and **growth scalability**, designed with human occupancy in mind but initially uninhabited.
 
