Revise headers in Agricultural Systems document

--- a/4. Agricultural Systems.md
+++ b/4. Agricultural Systems.md
@@ -1,4 +1,5 @@
-## 4) Agricultural Systems — AGI-Operated Hydroponics, Aquaponics & Regolith Soil Development
+# 4) Agricultural Systems
+## AGI-Operated Hydroponics, Aquaponics & Regolith Soil Development
 
 ### A. Aquaponics & Use of Effluent on Regolith
 
